# Temporal

./: CMakeLists.txt
include/core/: Vector2D.h
include/core/ECS/: Component_Array.hpp  Component_Manager.hpp  ECS_Orchestrator.hpp  Entity_Manager.hpp  System.hpp  System_Manager.hpp  ecs.hpp
include/core/ECS/components/: Collider_Component.hpp  Position_Component.h  Position_Component.hpp  Size_Component.hpp  Sprite_Component.hpp  Transform_Component.hpp  Velocity_Component.hpp
include/core/ECS/systems/: Collider_System.hpp  Position_System.hpp  Render_System.hpp  Transform_System.hpp
include/core/math/: Vector2D.h
include/game/: Collision_Orchestrator.h  Temporal_Game_entity.h  Temporal_IGame_object.h  Temporal_Loading_Parameters.h  Temporal_SDL_Game_object.h  Temporal_game.h  Temporal_renderer.h  Temporal_window.h  Texture_paths.hpp
include/game/components/: Temporal_Texture_component.h
include/game/constants/: Temporal_Game_Object_Types.h  Texture_Paths.hpp
include/game/entities/: Temporal_Player.h
include/game/events/: Move_Event.h  Temporal_Event_Manager.h  event.h
include/game/factories/: Temporal_Game_Object_factory.h  Temporal_Game_Object_types.h
include/game/map/: Temporal_Tile.h  Temporal_Tilemap.h
include/profiling/: Temporal_Timer.hpp  memory_tracker.hpp  metrics.h  metrics.hpp  timer.hpp
include/utils/: Temporal_Asset_Manager.h  Temporal_Texture_manager.h  Temporal_aliases.hpp  Temporal_logger.h
scripts/: gen_cmake.mak
src/: main.cpp
src/core/math/: Vector2D.cpp
src/game/: Collision_Orchestrator.cpp  Temporal_Game.cpp  Temporal_Game_entity.cpp  Temporal_Loading_Parameters.cpp  Temporal_SDL_Game_object.cpp  Temporal_renderer.cpp  Temporal_window.cpp
src/game/entities/: Temporal_Player.cpp
src/game/events/: Move_Event.cpp  Temporal_Event_Manager.cpp
src/game/factories/: Temporal_Game_Object_factory.cpp
src/map/: Temporal_Tilemap.cpp
src/profiling/: Temporal_Memory_Tracker.cpp  Temporal_Timer.cpp  memory_tracker.cpp  timer.cpp
src/utils/: Temporal_Asset_Manager.cpp  Temporal_Texture_manager.cpp  Temporal_logger.cpp
